kubernetes/todo-kustomize/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: todoapp.backend.dev
    http:
      paths:
      - backend:
          service:
            name: todo-backend
            port:
              number: 80
        path: /
        pathType: Prefix
